--- a/Winfs Anki CodeBook/indexstyle.css
+++ b/Winfs Anki CodeBook/indexstyle.css
@@ -40,6 +40,9 @@ button{
 a{
     color:yellowgreen;
 }
-footer{
+#fttext{
+    clear; both;
+    color: red;
     text-align: center;
+    font-style:italic;
 }
