edited boxun css file with footer styler

--- a/Winfs Anki CodeBook/boxun.css
+++ b/Winfs Anki CodeBook/boxun.css
@@ -19,3 +19,9 @@ h2{
     width: 100px;
     height: 100px;
 }
+#fttext{
+    clear; both;
+    color: red;
+    text-align: center;
+    font-style:italic;
+}
